--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "devDependencies": {
     "axios": "^1.6.1",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^11.0.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "laravel-echo": "^1.15.3",
+    "pusher-js": "^8.4.0-rc2"
   },
   "name": "clientsoket.edu",
   "version": "1.0.0",
